troca 'tem que' e 'precisa' por 'deve'

--- a/lang/brazilian_portuguese.lang
+++ b/lang/brazilian_portuguese.lang
@@ -266,18 +266,18 @@ quote_title =                     'Inserir texto citado da postagem a ser respon
 error_no_name =                   'Nenhum nome informado'
 error_no_subject =                'Nenhum assunto informado'
 error_no_text =                   'Nenhum texto na mensagem'
-terms_of_use_error_register =     'Você tem que aceitar os termos de uso para completar o registro'
-terms_of_use_error_posting =      'Você tem que aceitar os termos de uso para enviar esta mensagem'
-terms_of_use_error_reconf =       'Você precisa aceitar as mudanças nos termos de uso para mandar mais mensagens'
-data_priv_statement_error_reg =   'Você tem que aceitar a declaração de proteção de dados para completar o registro'
-data_priv_statement_error_post =  'Você precisa aceitar a declaração de proteção de dados para mandar esta mensagem'
-data_priv_statement_error_reconf ='Você precisa aceitar as mudanças na declaração de proteção de dados para enviar mais mensagens'
+terms_of_use_error_register =     'Você deve aceitar os termos de uso para completar o registro'
+terms_of_use_error_posting =      'Você deve aceitar os termos de uso para enviar esta mensagem'
+terms_of_use_error_reconf =       'Você deve aceitar as mudanças nos termos de uso para mandar mais mensagens'
+data_priv_statement_error_reg =   'Você deve aceitar a declaração de proteção de dados para completar o registro'
+data_priv_statement_error_post =  'Você deve aceitar a declaração de proteção de dados para mandar esta mensagem'
+data_priv_statement_error_reconf ='Você deve aceitar as mudanças na declaração de proteção de dados para enviar mais mensagens'
 submit_button_agreed =            'Eu concordo'
 submit_button_disagreed =         'Eu não concordo'
 check_all =                       'marcar tudo'
 uncheck_all =                     'desmarcar tudo'
-delete_backup_confirm =           'Você tem certeza de que quer apagar este backup?'
-delete_sel_backup_confirm =       'Você tem certeza de que quer apagar todos os de backups selecionados?'
+delete_backup_confirm =           'Tem certeza de que quer apagar este backup?'
+delete_sel_backup_confirm =       'Tem certeza de que quer apagar todos os de backups selecionados?'
 drag_and_drop_title =             'Arraste e solte para colocar acima ou abaixo'
 show_all_postings_link =          'Mostrar Posts'
 show_bookmarks_link =             'Marcadores'
