troca 'marcador' por 'favorito'

--- a/lang/brazilian_portuguese.lang
+++ b/lang/brazilian_portuguese.lang
@@ -287,22 +287,22 @@ hide_password_title =             'Escopnder a senha'
 
 [bookmark]
 delete_bookmark_submit =          'OK - Apagar Marcador'
-delete_bookmark_confirm =         'Você realmente deseja apagar este marcador?'
-no_bookmarks =                    'Nenhum marcador especificado.'
+delete_bookmark_confirm =         'Você realmente deseja apagar este favorito?'
+no_bookmarks =                    'Nenhum favorito especificado.'
 edit_bookmark =                   'Marcador:'
 edit_tags =                       'Tags:'
 edit_tags_note =                  '(opcional, separado por vírgula)'
-bookmark_title =                  'Nome do marcador'
+bookmark_title =                  'Nome do favorito'
 bookmark_user_name =              'Nome do usuário'
-bookmark_creation_time =          'Criação do marcador'
+bookmark_creation_time =          'Criação do favorito'
 bookmark_posting_time =           'Criação da postagem'
-bookmark_filter_linktitle =       'Aplicar filtro por marcador'
-clear_bookmark_filter_linkname =  'Limpar filtro por marcador'
-clear_bookmark_filter_linktitle = 'Limpar o filtro por marcador atual e mostrar todos os marcadores salvos'
+bookmark_filter_linktitle =       'Aplicar filtro por favorito'
+clear_bookmark_filter_linkname =  'Limpar filtro por favorito'
+clear_bookmark_filter_linktitle = 'Limpar o filtro por favorito atual e mostrar todos os favoritos salvos'
 error_no_bookmark_subject =       'Nenhum assunto foi inserido'
 error_bookmark_subject_too_long = 'O assunto é muito longo'
 error_bookmark_word_too_long =    'A palavra "[word]" é muito longa'
-error_bookmark_tags_limit_reached = 'Limite de tags para o marcador alcançado'
+error_bookmark_tags_limit_reached = 'Limite de tags para o favorito alcançado'
 
 [entry]
 edited_by =                       'editado por [name], [time]'
@@ -312,10 +312,10 @@ several_views =                   '[views] visualizações'
 complete_thread_marking =         'Thread completo:'
 branch_marking =                  'Ramo atual do thread'
 direct_replies_marking =          'Respostas diretas à esta postagem:'
-add_bookmark_message_linkname =   'adicionar marcador'
-add_bookmark_message_linktitle =  'Adicionar esta postagem em sua lista pessoal de marcadores'
-delete_bookmark_message_linkname ='apagar marcador'
-delete_bookmark_message_linktitle='Apagar esta postagem de sua lista pessoal de marcadores'
+add_bookmark_message_linkname =   'adicionar favorito'
+add_bookmark_message_linktitle =  'Adicionar esta postagem em sua lista pessoal de favoritos'
+delete_bookmark_message_linkname ='apagar favorito'
+delete_bookmark_message_linktitle='Apagar esta postagem de sua lista pessoal de favoritos'
 edit_message_linkname =           'editar'
 edit_message_linktitle =          'editar postagem'
 delete_message_linkname =         'apagar'
